--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
           </ul>
         </div>
         <div class="footer__social">
-          <h3 data-i18n-en="stay connected">restez connectée</h3>
+          <h3 data-i18n-en="stay connected">restez connecté</h3>
           <ul>
             <li><a href="https://www.instagram.com/petitchardon" target="_blank" rel="noreferrer">instagram</a></li>
             <li><a href="https://www.behance.net/petitchardon" target="_blank" rel="noreferrer">behance</a></li>
@@ -512,10 +512,10 @@
         <div class="footer__legal" id="mentions-legales">
           <h3 data-i18n-en="legal">mentions légales</h3>
           <p
-            data-i18n-en="© <span id=&quot;annee-actuelle&quot;></span> petitchardon · All rights reserved · SIREN 000 000 000. Data used only to reply to your request. Hosting: to be completed. Publisher: Anne, petitchardon."
+            data-i18n-en="© <span id=&quot;annee-actuelle&quot;></span> petitchardon · All rights reserved · SIRET 81438124000021. Data used only to reply to your request. Hosting: GitHub Pages. Publisher: Anne Della Gaspera."
           >
-            © <span id="annee-actuelle"></span> petitchardon · Tous droits réservés · SIREN 000 000 000. Données utilisées
-            uniquement pour répondre à votre demande. Hébergement : à compléter. Responsable de publication : Anne, petitchardon.
+            © <span id="annee-actuelle"></span> petitchardon · Tous droits réservés · SIRET 81438124000021. Données utilisées
+            uniquement pour répondre à votre demande. Hébergement : à GitHub Pages. Responsable de publication : Anne Della Gaspera.
           </p>
         </div>
       </div>
