Change domain suffix to '.fr'

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       content="Je façonne des identités comme on raconte une histoire : la vôtre. Découvrez mon univers, mon processus et mes projets."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.petitchardon.com/" />
-    <meta property="og:image" content="https://www.petitchardon.com/assets/images/preview.jpg" />
+    <meta property="og:url" content="https://www.petitchardon.fr/" />
+    <meta property="og:image" content="https://www.petitchardon.fr/assets/images/preview.jpg" />
     <meta name="theme-color" content="#0f0e54" />
-    <link rel="canonical" href="https://www.petitchardon.com/" />
+    <link rel="canonical" href="https://www.petitchardon.fr/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preload" href="assets/fonts/Roca-Font/Roca%20Black.ttf" as="font" type="font/ttf" crossorigin />
@@ -31,8 +31,8 @@
         "@type": "Person",
         "name": "Anne · petitchardon",
         "jobTitle": "Graphiste, illustratrice et rédactrice freelance",
-        "url": "https://www.petitchardon.com/",
-        "image": "https://www.petitchardon.com/assets/images/anne-portrait.jpg",
+        "url": "https://www.petitchardon.fr/",
+        "image": "https://www.petitchardon.fr/assets/images/anne-portrait.jpg",
         "description": "Studio de création visuelle qui façonne des identités de marque comme on raconte une histoire.",
         "sameAs": [
           "https://www.instagram.com/petitchardon",
@@ -51,17 +51,17 @@
           {
             "@type": "Offer",
             "name": "Création d'identité visuelle",
-            "url": "https://www.petitchardon.com/#processus"
+            "url": "https://www.petitchardon.fr/#processus"
           },
           {
             "@type": "Offer",
             "name": "Illustration éditoriale",
-            "url": "https://www.petitchardon.com/#portfolio"
+            "url": "https://www.petitchardon.fr/#portfolio"
           },
           {
             "@type": "Offer",
             "name": "Rédaction stratégique",
-            "url": "https://www.petitchardon.com/#contact"
+            "url": "https://www.petitchardon.fr/#contact"
           }
         ]
       }
@@ -388,7 +388,7 @@
             <ul class="contact__highlights">
               <li>
                 <strong data-i18n-en="email">email</strong>
-                <a href="mailto:bonjour@petitchardon.com">anne@petitchardon.fr</a>
+                <a href="mailto:bonjour@petitchardon.fr">anne@petitchardon.fr</a>
               </li>
               <li>
                 <strong data-i18n-en="phone">téléphone</strong>
@@ -404,7 +404,7 @@
           </div>
           <form
             class="contact__form glass-surface"
-            action="https://formsubmit.co/bonjour@petitchardon.com"
+            action="https://formsubmit.co/bonjour@petitchardon.fr"
             method="POST"
             data-form
           >
@@ -457,7 +457,7 @@
               type="hidden"
               name="_subject"
               value="Nouveau message depuis petitchardon.fr"
-              data-i18n-en-value="New message from petitchardon.com"
+              data-i18n-en-value="New message from petitchardon.fr"
             />
             <button
               class="btn btn--primary"
@@ -524,3 +524,4 @@
     <script src="js/main.js" defer></script>
   </body>
 </html>
+
