--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
               <li
                 data-i18n-en="Contrasts audited, keyboard navigation and structured markup keep assistive technologies aligned."
               >
-                Respect stricte des normes d'accessibilités et de lisibilités pour vous rendre accessible.
+                Respect strict des normes d'accessibilité et de lisibilité pour vous rendre accessible.
               </li>
               <li
                 data-i18n-en="Lightweight assets and progressive loading keep the experience fast and energy-conscious."
@@ -356,7 +356,7 @@
               <div class="portfolio__content">
                 <h3 data-i18n-en="constellation">cocobot</h3>
                 <p data-i18n-en="Illustrated universe for a collective of children’s authors.">
-                  Définition du calendrier éditoriale pour LinkedIn, création des templates et gestions des posts.
+                  Définition du calendrier éditorial pour LinkedIn, création des templates et gestion des posts.
                 </p>
                 <span class="portfolio__link" data-i18n-en="view project">voir le projet</span>
               </div>
@@ -447,7 +447,7 @@
               <input id="rgpd" name="rgpd" type="checkbox" value="true" required />
               <label for="rgpd">
                 <span data-i18n-en="I agree that my data will only be used to get in touch, according to the">
-                  J’accepte que mes données soient utilisées uniquement pour être recontactée conformément à la
+                  J’accepte que mes données soient utilisées uniquement pour être recontacté conformément à la
                 </span>
                 <a href="#mentions-legales" data-i18n-en="privacy policy">politique de confidentialité</a>.
               </label>
@@ -515,7 +515,7 @@
             data-i18n-en="© <span id=&quot;annee-actuelle&quot;></span> petitchardon · All rights reserved · SIRET 81438124000021. Data used only to reply to your request. Hosting: GitHub Pages. Publisher: Anne Della Gaspera."
           >
             © <span id="annee-actuelle"></span> petitchardon · Tous droits réservés · SIRET 81438124000021. Données utilisées
-            uniquement pour répondre à votre demande. Hébergement : à GitHub Pages. Responsable de publication : Anne Della Gaspera.
+            uniquement pour répondre à votre demande. Hébergement : GitHub Pages. Responsable de publication : Anne Della Gaspera.
           </p>
         </div>
       </div>
@@ -524,4 +524,5 @@
     <script src="js/main.js" defer></script>
   </body>
 </html>
+
 
