--- a/index.html
+++ b/index.html
@@ -5,20 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>petitchardon | graphisme, illustration & rédaction freelance</title>
-    <meta
-      name="description"
-      content="Graphiste-illustratrice-rédactrice freelance, petitchardon imagine des identités visuelles immersives et responsables qui racontent votre histoire."
-    />
-    <meta
-      name="keywords"
-      content="graphiste freelance, identité visuelle, illustration, rédaction, storytelling, direction artistique, branding, studio créatif, petitchardon"
-    />
+    <meta\n      name="description"\n      content="Graphiste-illustratrice-rédactrice freelance à Rambouillet (Yvelines), petitchardon imagine des identités visuelles immersives et responsables qui racontent votre histoire."\n    />
+    <meta\n      name="keywords"\n      content="graphiste Rambouillet, webdesigner Rambouillet, logo Rambouillet, illustratrice Rambouillet, graphiste freelance, identité visuelle, illustration, rédaction, storytelling, direction artistique, branding, studio créatif, petitchardon, petit chardon"\n    />
     <meta name="author" content="Anne Della Gaspera" />
     <meta property="og:title" content="petitchardon | studio graphisme & storytelling visuel" />
-    <meta
-      property="og:description"
-      content="Je façonne des identités comme on raconte une histoire : la vôtre. Découvrez mon univers, mon processus et mes projets."
-    />
+    <meta\n      property="og:description"\n      content="Studio créatif à Rambouillet (Yvelines) : je façonne des identités comme on raconte une histoire, la vôtre."\n    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.petitchardon.fr/" />
     <meta property="og:image" content="https://www.petitchardon.fr/assets/images/anne-portrait.jpg" />
@@ -27,10 +18,7 @@
     <meta property="og:locale:alternate" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="petitchardon | studio graphisme & storytelling visuel" />
-    <meta
-      name="twitter:description"
-      content="Je façonne des identités comme on raconte une histoire : la vôtre. Découvrez mon univers, mon processus et mes projets."
-    />
+    <meta\n      name="twitter:description"\n      content="Studio créatif à Rambouillet (Yvelines) : je façonne des identités comme on raconte une histoire, la vôtre."\n    />
     <meta name="twitter:image" content="https://www.petitchardon.fr/assets/images/anne-portrait.jpg" />
     <meta name="theme-color" content="#0f0e54" />
     <link rel="canonical" href="https://www.petitchardon.fr/" />
@@ -80,7 +68,7 @@
           {
             "@type": "Person",
             "@id": "https://www.petitchardon.fr/#anne",
-            "name": "Anne — petitchardon",
+            "name": "Anne - petitchardon",
             "jobTitle": "Graphiste, illustratrice et rédactrice freelance",
             "url": "https://www.petitchardon.fr/",
             "image": "https://www.petitchardon.fr/assets/images/anne-portrait.jpg",
@@ -99,6 +87,35 @@
             ],
             "areaServed": ["France", "Europe"],
             "worksFor": { "@id": "https://www.petitchardon.fr/#organization" }
+          },
+          {
+            "@type": "ProfessionalService",
+            "@id": "https://www.petitchardon.fr/#studio",
+            "name": "petitchardon | graphiste & webdesigner",
+            "url": "https://www.petitchardon.fr/",
+            "image": "https://www.petitchardon.fr/assets/images/anne-portrait.jpg",
+            "logo": "https://www.petitchardon.fr/assets/images/logo-petitchardon.svg",
+            "address": {
+              "@type": "PostalAddress",
+              "addressLocality": "Rambouillet",
+              "addressRegion": "Yvelines",
+              "addressCountry": "FR"
+            },
+            "areaServed": ["Rambouillet", "Yvelines", "Île-de-France", "France", "Europe"],
+            "availableLanguage": ["fr", "en"],
+            "sameAs": [
+              "https://www.instagram.com/petitchardon",
+              "https://www.behance.net/petitchardon",
+              "https://www.linkedin.com/in/petitchardon"
+            ],
+            "serviceType": [
+              "identité visuelle",
+              "logo",
+              "direction artistique",
+              "illustration",
+              "webdesign",
+              "rédaction"
+            ]
           }
         ]
       }
@@ -173,6 +190,7 @@
               >graphisme · illustration · rédaction</span
             >
             <h1 data-i18n-en="make your brand impossible to forget">faites-vous remarquer</h1>
+            <p class="hero__location" data-i18n-en="Graphic designer & web designer in Rambouillet (Yvelines), creating logos, visual identities and websites.">\n              Graphiste & webdesigner à Rambouillet (Yvelines), je crée logos, identités visuelles et sites web.\n            </p>
             <p
               class="hero__intro"
               data-i18n-en="I craft brand identities the same way I tell a story: yours. I help daring brands leave a lasting mark in everyone’s imagination."
